opam-version: "1.2"
name: "lwt-node"
version: "0.0.1"
maintainer: "Kennet Postigo <kennetfpostigo@gmail.com>"
authors: [
  "Kennet Postigo <kennetfpostigo@gmail.com>"
]
license: "MIT"
homepage: "https://github.com/kennetpostigo/lwt-node"
doc: "https://kennetpostigo.github.io/lwt-node/"
bug-reports: "https://github.com/kennetpostigo/lwt-node/issues"
dev-repo: "git://github.com/kennetpostigo/lwt-node.git"
tags: [ "reason" "node" ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "lwt"         {= "3.2.0"}
  "reason"      {= "3.0.4"}
  "jbuilder"    {build}
  "alcotest"    {= "0.8.1"}
  "bisect_ppx"  {= "1.3.2"}
]
available: [ ocaml-version >= "4.03" & ocaml-version < "4.05" ]
